--- a/Destapa-Cañerias/Destapaciones-Cerca-De-Mi.html
+++ b/Destapa-Cañerias/Destapaciones-Cerca-De-Mi.html
@@ -142,27 +142,27 @@ Destapaciones Cerca De Mi
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Mayoristas-en-zona-sur.html">Mayoristas en zona sur </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañeria-Cocina.html">Destapar Cañeria Cocina </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapador-Sanitario.html">Destapador Sanitario </a> 
+       <a href="../Servicios/Bolsa-de-asar-mercadona.html">Bolsa de asar mercadona </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-remover-pelos-encravados.html">Como remover pelos encravados </a> 
+       <a href="../Servicios/Destapa-cañerias-liquido-precio.html">Destapa cañerias liquido precio </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Descubrimiento-de-la-plata-elemento-quimico.html">Descubrimiento de la plata elemento quimico </a> 
+       <a href="../Servicios/Empresas-constructoras-zona-norte.html">Empresas constructoras zona norte </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapadora-Electrica.html">Destapadora Electrica </a> 
+       <a href="../Servicios/Destapador-de-baño-liquido-walmart.html">Destapador de baño liquido walmart </a> 
          </li>
 <!--EndPostsList-->
 
@@ -225,57 +225,57 @@ Destapaciones Cerca De Mi
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Maquina-Destapa-Cantilde;erias-Electrica.html">Maquina Destapa Cañerias Electrica </a> 
+       <a href="../Destapa-Cañerias/Limpieza-De-Cañerias.html">Limpieza De Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Con-Que-Destapo-Una-Cantilde;eria.html">Con Que Destapo Una Cañeria </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-bantilde;o-con-soda-caustica-inodoro.html">Como destapar baño con soda caustica inodoro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Desagotadora-El-Destape.html">Desagotadora El Destape </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Urgencias-24hs.html">Destapaciones Urgencias 24hs </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Empresa-Destapa-Cañerias-en-Palermo.html">Empresa Destapa Cañerias en Palermo </a> 
+       <a href="../Servicios/Repuesto-de-quemadores-para-parrillas-a-gas.html">Repuesto de quemadores para parrillas a gas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Relieve-de-la-zona-norte-grande-de-chile.html">Relieve de la zona norte grande de chile </a> 
+       <a href="../Servicios/Como-mejorar-tu-Limpiar-cantilde;erias-de-agua-potable.html">Como mejorar tu Limpiar cañerias de agua potable </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas-Precios.html">Destapaciones De Cloacas Precios </a> 
+       <a href="../Servicios/Destapacaños-liquido-truper.html">Destapacaños liquido truper </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Limpieza-De-Desagues.html">Limpieza De Desagues </a> 
+       <a href="../Servicios/Destapar-Cañeria-Con-Aire-en-Palermo.html">Destapar Cañeria Con Aire en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-hacer-destapa-cañerias-liquido.html">Como hacer destapa cañerias liquido </a> 
+       <a href="../Servicios/Destapadora-De-Cañerias-en-Palermo.html">Destapadora De Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/El-Mejor-Destapador-De-Cañerias-en-Palermo.html">El Mejor Destapador De Cañerias en Palermo </a> 
+       <a href="../Servicios/Puedes-darme-informacion-sobre-Para-destrancar-cantilde;erias.html">Puedes darme informacion sobre Para destrancar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacañerias-ayudin-opiniones.html">Destapacañerias ayudin opiniones </a> 
+       <a href="../Servicios/Con-Que-Destapo-Una-Cañeria-en-Palermo.html">Con Que Destapo Una Cañeria en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-con-acido-muriatico.html">Como destapar un inodoro con acido muriatico </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De.html">Destapaciones De </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
