--- a/Destapa-Cañerias/Destapaciones-Con-Maquina.html
+++ b/Destapa-Cañerias/Destapaciones-Con-Maquina.html
@@ -142,27 +142,27 @@ Destapaciones Con Maquina
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapacaños-truper-home-depot.html">Destapacaños truper home depot </a> 
+       <a href="../Destapa-Cañerias/Bomba-destapacaños-home-depot.html">Bomba destapacaños home depot </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Como-destapar-el-inodoro-con-bicarbonato-de-sodio.html">Como destapar el inodoro con bicarbonato de sodio </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquina.html">Destapaciones Con Maquina </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Camara-Para-Cloacas-Precios.html">Camara Para Cloacas Precios </a> 
+       <a href="../Destapa-Cañerias/Alcohol-boricado-a-saturacion.html">Alcohol boricado a saturacion </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Gusano-destapacaños-home-depot.html">Gusano destapacaños home depot </a> 
+       <a href="../Servicios/Proceso-de-la-planta-para-niños.html">Proceso de la planta para niños </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapaciones-Cañerias-en-Palermo.html">Destapaciones Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Emergencias-24hs.html">Destapaciones Emergencias 24hs </a> 
          </li>
 <!--EndPostsList-->
 
@@ -225,32 +225,37 @@ Destapaciones Con Maquina
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-bantilde;o-bien-tapado.html">Como destapar un baño bien tapado </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-la-cañeria-del-baño-con-soda-caustica.html">Como destapar la cañeria del baño con soda caustica </a> 
+       <a href="../Servicios/Aparato-Destapa-Cañerias-en-Palermo.html">Aparato Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapacion-Cloacas.html">Destapacion Cloacas </a> 
+       <a href="../Servicios/Sabes-que-hacer-cuando-Destapa-cantilde;erias.html">Sabes que hacer cuando Destapa cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Empresa-Destapa-Cañerias-en-Palermo.html">Empresa Destapa Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Ideas-frescas-para-Vinagre-y-bicarbonato-para-destapar-cantilde;erias.html">Ideas frescas para Vinagre y bicarbonato para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Cable-destapa-cañerias-precio.html">Cable destapa cañerias precio </a> 
+       <a href="../Servicios/Destapar-tuberias-de-aguas-servidas.html">Destapar tuberias de aguas servidas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Con-Que-Destapo-Un-Bantilde;o.html">Con Que Destapo Un Baño </a> 
+       <a href="../Destapa-Cañerias/Estrategias-para-Destapacion-cantilde;erias.html">Estrategias para Destapacion cañerias </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-zona-sur.html">Destapaciones de cloacas zona sur </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -260,22 +265,17 @@ Destapaciones Con Maquina
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapar-Desague-Pluvial.html">Destapar Desague Pluvial </a> 
+       <a href="../Servicios/Necesito-ayuda-con-Cantilde;eria-de-bantilde;o-tapada.html">Necesito ayuda con Cañeria de baño tapada </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapador-De-Inodoros.html">Destapador De Inodoros </a> 
+       <a href="../Destapa-Cañerias/Cual-es-la-mejor-estrategia-para-La-coca-cola-es-buena-para-destapar-cantilde;erias.html">Cual es la mejor estrategia para La coca cola es buena para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Todo-Destapaciones.html">Todo Destapaciones </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-junin.html">Destapaciones de cloacas junin </a> 
+       <a href="../Servicios/Destapacaños-manual-precio.html">Destapacaños manual precio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
